--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.22",
-    "next": "^15",
+    "next": "15.5.9",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -19,7 +19,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "^15",
+    "eslint-config-next": "15.5.9",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
